--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Bitly Link Shortener",
+    "name": "shareus Link Shortener",
     "description": "Bot can Generate Bitly short l8nk ",
     "repository": "https://github.com/Happy9012/BitlyBot",
     "keywords": ["Shareus", "pyrogram", "telegram bot"],
